--- a/2.exercisesNext/1.canvas/index.html
+++ b/2.exercisesNext/1.canvas/index.html
@@ -8,7 +8,7 @@
     <title>Mario vs le reste du monde</title>
 </head>
 <body>
-<audio src="./assets/mario.mp3" controls autoplay>Ok</audio>
+<!-- <audio src="./assets/mario.mp3" controls autoplay>Ok</audio> -->
 <canvas id="canvas" width="800" height="600">
 </canvas>
 
